# MaSecure

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  masecure_cdc.docx  masecure_ct.docx  package-lock.json  test_whatsapp_bot.sh
admin-dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
admin-dashboard/src/: App.jsx
api/: WHATSAPP_INTEGRATION.go  main.go
api/handlers/: callback_adapters.go  callback_adapters_test.go  callback_handler.go  callback_handler_test.go  payout_callback_adapters.go  payout_callback_adapters_test.go  (+3 more)
kernel/: Cargo.toml
kernel/src/: http_server.rs  main.rs
kernel/src/application/: contribution_service.rs  mod.rs  payout_service.rs  resilience_service.rs
kernel/src/domain/: cycle.rs  debt.rs  events.rs  identity.rs  ledger.rs  mod.rs  working_capital.rs
kernel/src/infrastructure/: mod.rs  pg_contribution_repo.rs  pg_cycle_repo.rs  pg_debt_repo.rs  pg_identity_repo.rs  pg_ledger_repo.rs  pg_outbox_repo.rs  pg_working_capital_repo.rs  resilience_scheduler.rs  scheduler.rs
kernel/src/ports/: contribution_repo.rs  cycle_repo.rs  debt_repo.rs  identity_repo.rs  ledger_repo.rs  mod.rs  outbox_repo.rs  working_capital_repo.rs
migrations/: 001_identities.sql  002_groups_configs.sql  003_cycles.sql  004_ledger.sql  005_outbox.sql  006_contributions.sql  007_contribution_cycle_guards.sql  008_proposals.sql  009_resilience.sql  010_compliance_monitoring.sql
outbox/: main.go  main_test.go  main_v2.go.bak
social/: main.go  main_v2.go.bak
(+48 files in other folders)
