[package]
name    = "masecure-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel-server"
path = "src/main.rs"

[[bin]]
name = "verify-ledger"
path = "src/bin/verify_ledger.rs"

[lib]
name = "masecure_kernel"
path = "src/lib.rs"

[dependencies]
axum            = { version = "0.7", features = ["json"] }
tokio           = { version = "1", features = ["full", "signal"] }
sqlx            = { version = "0.7", features = ["postgres", "uuid", "time", "json", "runtime-tokio-native-tls"] }
uuid            = { version = "1", features = ["v4", "serde"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
sha2            = "0.10"
hex             = "0.4"
time            = { version = "0.3", features = ["serde", "formatting"] }
thiserror       = "1"
anyhow          = "1"
async-trait     = "0.1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
